--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -1,1 +1,20 @@
-<h1>Register</h1>
+<h1 class="text-center">Register</h1>
+<form role="form">
+    <div class="form-group">
+        <label for="username">Username:</label>
+        <input type="email" class="form-control" id="username" placeholder="Enter username">
+    </div>
+    <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" class="form-control" id="email" placeholder="Enter email">
+    </div>
+    <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+    </div>
+    <div class="form-group">
+        <label for="pwd-repeat">Password:</label>
+        <input type="password" class="form-control" id="pwd-repeat" placeholder="Repeat password">
+    </div>
+    <button type="submit" class="btn btn-default center-block">Register</button>
+</form>
