--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -2,11 +2,15 @@
 <form role="form">
     <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" placeholder="Enter email">
+        <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="user.email">
     </div>
     <div class="form-group">
         <label for="pwd">Password:</label>
-        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="user.password" minlength="6">
     </div>
-    <button type="submit" class="btn btn-default center-block">Login</button>
+    <button type="submit" class="btn btn-default center-block" ng-click="login()">Login</button>
+    <br>
+    <div class="form-group text-center">
+        <span class="text-center"><a href="#/register">Register</a></span>
+    </div>
 </form>
