--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,14 +1,15 @@
 <h1 class="text-center">Login</h1>
 <form role="form">
     <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="user.email">
+        <label for="username">Email:</label>
+        <input type="text" class="form-control" id="username" placeholder="Enter username" ng-model="user.username">
     </div>
     <div class="form-group">
         <label for="pwd">Password:</label>
         <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="user.password" minlength="6">
     </div>
     <button type="submit" class="btn btn-default center-block" ng-click="login()">Login</button>
+    <button type="submit" class="btn btn-default center-block" ng-click="logout()">Log out</button>
     <br>
     <div class="form-group text-center">
         <span class="text-center"><a href="#/register">Register</a></span>
