Added some templates

--- a/templates/notes/notes.html
+++ b/templates/notes/notes.html
@@ -1,1 +1,9 @@
-<h1>Notes</h1>
+<h1 class="text-center">Notes</h1>
+<div class="col-sm-10">
+    <input type="text" class="form-control" placeholder="Search note"/>
+</div>
+<div class="col-sm-2">
+    <a href="/add-note"><span class="glyphicon glyphicon-plus center-block" style="font-size: 25px"></span></a>
+</div>
+<div ng-repeat="note in notes">
+</div>
